--- a/driver/Kbuild
+++ b/driver/Kbuild
@@ -7,6 +7,7 @@ PXMLT5_USB_MAX_DEVICE := 0
 PXMLT8_USB_MAX_DEVICE := 0
 ISDB2056_USB_MAX_DEVICE := 0
 ISDB6014_4TS_USB_MAX_DEVICE := 0
+PXM1UR_USB_MAX_DEVICE := 0
 PSB_DEBUG := 0
 ITEDTV_BUS_USE_WORKQUEUE := 0
 
@@ -30,6 +31,9 @@ ccflags-y += -DISDB2056_USB_MAX_DEVICE=$(ISDB2056_USB_MAX_DEVICE)
 endif
 ifneq ($(ISDB6014_4TS_USB_MAX_DEVICE),0)
 ccflags-y += -DISDB6014_4TS_USB_MAX_DEVICE=$(ISDB6014_4TS_USB_MAX_DEVICE)
+endif
+ifneq ($(PXM1UR_USB_MAX_DEVICE),0)
+ccflags-y += -DPXM1UR_USB_MAX_DEVICE=$(PXM1UR_USB_MAX_DEVICE)
 endif
 ifneq ($(PSB_DEBUG),0)
 ccflags-y += -DPSB_DEBUG
