driver: Kbuild に PXS1UR_USB_MAX_DEVICE が定義されていないのを修正

--- a/driver/Kbuild
+++ b/driver/Kbuild
@@ -8,6 +8,7 @@ PXMLT8_USB_MAX_DEVICE := 0
 ISDB2056_USB_MAX_DEVICE := 0
 ISDB6014_4TS_USB_MAX_DEVICE := 0
 PXM1UR_USB_MAX_DEVICE := 0
+PXS1UR_USB_MAX_DEVICE := 0
 PSB_DEBUG := 0
 ITEDTV_BUS_USE_WORKQUEUE := 0
 
@@ -34,6 +35,9 @@ ccflags-y += -DISDB6014_4TS_USB_MAX_DEVICE=$(ISDB6014_4TS_USB_MAX_DEVICE)
 endif
 ifneq ($(PXM1UR_USB_MAX_DEVICE),0)
 ccflags-y += -DPXM1UR_USB_MAX_DEVICE=$(PXM1UR_USB_MAX_DEVICE)
+endif
+ifneq ($(PXS1UR_USB_MAX_DEVICE),0)
+ccflags-y += -DPXS1UR_USB_MAX_DEVICE=$(PXS1UR_USB_MAX_DEVICE)
 endif
 ifneq ($(PSB_DEBUG),0)
 ccflags-y += -DPSB_DEBUG
