--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,5 +73,5 @@ jobs:
     - name: Check deb package
       run: |
         ls -al artifacts/*.deb
-        dpkg-deb --info *.deb
-        dpkg-deb --contents *.deb
+        dpkg-deb --info artifacts/*.deb
+        dpkg-deb --contents artifacts/*.deb
